# demand-forecast-intelligence

./: .claudeignore  .coverage  .cursorignore  .gitignore  CLAUDE.md  README.md  eda_analysis.py  eda_analysis_summary.txt  eda_findings_report.md  eda_step1_demo_output.txt  enhancement_completion_summary.txt  main_eda_demo_output.txt  pyproject.toml  readme_update_summary.txt  test_integration_fix.py
.claude/: settings.json  settings.local.json
.claude/commands/: pr.md
.claude/skills/: eda-framework-adapter.md  eda-framework-adapter.skill
configs/: data.yaml
data/: README.md
docs/code-explanation-info/: sampling-system-walkthrough.md
docs/implementation-info/: core-infrastructure-foundation.md  m5-sample-dataset-generation.md  m5-sample-dataset-system.md
docs/implementation-info/eda/: IMPLEMENTATION_SUMMARY.md  README.md
docs/my-docs/my-project-info/: airflow-pipelines.md  detailed_eda_checklist.md  executive-business-requirements-design.md  implementation-sequence.md  implementation.md  project-description.md
docs/my-docs/project-info/: executive-business-requirements-design.md  handle_variablity.md  implementation-sequence(partial)-desc.md
docs/my-docs/prompts/: EDA-insights.md  apply-eda-skill.md  code-walkthrough.md  create-sample-dataset.md  data-scanity.md  document-implementation-info.md  document-schema.md  eda.md  pre-processing.md  project-structure-boilerplate-code.md  setup-dependencies.md
docs/my-skills/: eda-framework-adapter.md
docs/outcomes-info/sampling/: sample_validation_report_2026-05-19_205430.md  sample_validation_report_2026-05-19_211056.md  sample_validation_report_2026-05-19_213124.md
docs/project-info/: dir-structure copy.md  dir-structure-tree.md  dir-structure.md  implementation.md  model-development-recommendations.md  pipelines.md  project-description.md  project-overview.md  schema-info.md
docs/project-info/claude/: eda_framework.md  eda_framework_v2.md
docs/project-info/cursor/: eda_framework.md
docs/superpowers/plans/: 2026-05-14-schema-documentation.md  2026-05-16-core-infrastructure-data-foundation.md  (+7 more)
docs/testing/: quick-reference.md  testing-guide-comprehensive.md
eda/: config.py  main_eda_demo.py
eda/tests/: __init__.py
external-skills/: SKILLS_INDEX.md
my-docs/project-info/: project-description.md  schema-info.md
my-docs/prompts/: project-init.md  project-structure-boilerplate-code.md
notebooks/eda/: README.md  eda_analysis.py  eda_report.md  eda_steps_1_3_5.py  requirements.txt  run_eda_auto.py
project-docs/project-info/: implementation-sequence.md
scripts/: create_sample_dataset.py
tests/: test_eda_orchestration_steps_11_13_14.py  test_project_setup.py
tests/eda/: test_base_service.py  test_business_context_service.py  test_config.py  test_context.py  test_orchestrator.py
tests/integration/: test_sample_generation_integration.py
(+97 files in other folders)
