[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demand-forecast-intelligence"
version = "0.1.0"
description = "ML-driven demand forecast intelligence platform using Walmart M5 dataset"
readme = "README.md"
authors = [{name = "Demand Forecast Intelligence Team"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "structlog>=23.0.0",
    "numpy>=1.24.0",
]

[project.urls]
Repository = "https://github.com/rahulvansh66/demand-forecast-intelligence"
Issues = "https://github.com/rahulvansh66/demand-forecast-intelligence/issues"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
lint = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.4.0",
]
jupyternotebook = [
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "plotly>=5.0.0",
    "scipy>=1.10.0",
    "seaborn>=0.12.0",
    "statsmodels>=0.14.0",
    "tqdm>=4.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --disable-warnings"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88